--- a/Contact.html
+++ b/Contact.html
@@ -4,16 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact - Flask Blog</title>
-  <link rel="stylesheet" href="CSS/general.css">
+  <title>Contact</title>
   <link rel="stylesheet" href="CSS/contact.css">
+  <link rel="stylesheet" href="CSS/general.css">
 </head>
 
 <body>
-  <div class="loader"></div>
-
-  {% include "component/header.html" %}
-
   <div class="contact-section">
     <div class="contact-card">
       <h1>Get in Touch</h1>
@@ -37,7 +33,9 @@
     </div>
   </div>
 
+
   <script src="JS/script.js"></script>
+  <script src="JS/contact.js"></script>
 </body>
 
 </html>
