meta data change
Meta data change in html

--- a/index.html
+++ b/index.html
@@ -2,13 +2,73 @@
 <html lang="en">
 
 <head>
+    <!-- 🌟 Essential Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codec1 Tech Blog</title>
-    <link rel="stylesheet" href="css/general.css">
-    <link rel="stylesheet" href="css/home.css">
 
+    <!-- 🌟 Title Tag (Max 60 characters) -->
+    <title>Codec1 Tech Blog | Programming, Web Development, AI & More</title>
+
+    <!-- 🌟 Meta Description (Max 160 characters) -->
+    <meta name="description"
+        content="Codec1 Tech Blog provides the latest coding tutorials, programming tips, AI trends, web development guides, and tech tools to help developers grow.">
+
+    <!-- 🌟 Keywords (SEO-Optimized) -->
+    <meta name="keywords"
+        content="tech blog, programming tutorials, web development, AI trends, JavaScript, Python, data science, coding tips, machine learning, dev tools, software development">
+
+    <!-- 🌟 Author -->
+    <meta name="author" content="Codec1">
+
+    <!-- 🌟 Canonical URL (Avoid Duplicate Content Issues) -->
+    <link rel="canonical" href="https://www.codec1.com">
+
+    <!-- 🌟 Open Graph (OG) Tags for Social Media -->
+    <meta property="og:title" content="Codec1 Tech Blog | Learn Coding, AI, Web Dev & More">
+    <meta property="og:description"
+        content="Explore coding tutorials, web development guides, AI & machine learning trends, and developer tools at Codec1 Tech Blog.">
+    <meta property="og:image" content="https://www.codec1.com/images/blog-thumbnail.jpg">
+    <meta property="og:url" content="https://www.codec1.com">
+    <meta property="og:type" content="website">
+
+    <!-- 🌟 Twitter Card for Better Social Sharing -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Codec1 Tech Blog | Learn Coding, AI, Web Dev & More">
+    <meta name="twitter:description"
+        content="Explore coding tutorials, web development guides, AI & machine learning trends, and developer tools at Codec1 Tech Blog.">
+    <meta name="twitter:image" content="https://www.codec1.com/images/blog-thumbnail.jpg">
+
+    <!-- 🌟 Favicon (Change the URL to your actual favicon) -->
+    <link rel="icon" type="image/png" href="https://www.codec1.com/favicon.png">
+
+    <!-- 🌟 Robots Meta Tag (For Search Engine Indexing) -->
+    <meta name="robots" content="index, follow">
+
+    <!-- 🌟 Schema Markup (For Rich Results in Google) -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Blog",
+        "name": "Codec1 Tech Blog",
+        "url": "https://www.codec1.com",
+        "description": "Explore coding tutorials, web development guides, AI & machine learning trends, and developer tools at Codec1 Tech Blog.",
+        "author": {
+            "@type": "Person",
+            "name": "Codec1"
+        },
+        "publisher": {
+            "@type": "Organization",
+            "name": "Codec1",
+            "logo": "https://www.codec1.com/logo.png"
+        }
+    }
+    </script>
+
+    <!-- 🌟 Stylesheet -->
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/general.css">
 </head>
+
 
 <body>
 
