some issues fixes

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <meta name="author" content="Codec1">
 
     <!-- 🌟 Canonical URL (Avoid Duplicate Content Issues) -->
-    <link rel="canonical" href="https://www.codec1.com">
+    <link rel="canonical" href="https://codec1.netlify.app/">
 
     <!-- 🌟 Open Graph (OG) Tags for Social Media -->
     <meta property="og:title" content="Codec1 Tech Blog | Learn Coding, AI, Web Dev & More">
     <meta property="og:description"
         content="Explore coding tutorials, web development guides, AI & machine learning trends, and developer tools at Codec1 Tech Blog.">
-    <meta property="og:image" content="https://www.codec1.com/images/blog-thumbnail.jpg">
-    <meta property="og:url" content="https://www.codec1.com">
+    <meta property="og:image" content="https://codec1.netlify.app/images/logo.png">
+    <meta property="og:url" content="https://codec1.netlify.app/">
     <meta property="og:type" content="website">
 
     <!-- 🌟 Twitter Card for Better Social Sharing -->
@@ -39,7 +39,7 @@
     <meta name="twitter:image" content="https://www.codec1.com/images/blog-thumbnail.jpg">
 
     <!-- 🌟 Favicon (Change the URL to your actual favicon) -->
-    <link rel="icon" type="image/png" href="https://www.codec1.com/favicon.png">
+    <link rel="icon" type="image/png" href="IMAGES/logo.png">
 
     <!-- 🌟 Robots Meta Tag (For Search Engine Indexing) -->
     <meta name="robots" content="index, follow">
@@ -49,8 +49,8 @@
     {
         "@context": "https://schema.org",
         "@type": "Blog",
-        "name": "Codec1 Tech Blog",
-        "url": "https://www.codec1.com",
+        "name": "Codec1",
+        "url": "https://codec1.netlify.app/",
         "description": "Explore coding tutorials, web development guides, AI & machine learning trends, and developer tools at Codec1 Tech Blog.",
         "author": {
             "@type": "Person",
@@ -59,7 +59,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "Codec1",
-            "logo": "https://www.codec1.com/logo.png"
+            "logo": "https://codec1.netlify.app/images/logo.png"
         }
     }
     </script>
@@ -82,17 +82,17 @@
         <!-- Navigation Menu -->
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Categories</a>
+                <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="#" class="nav-link">Categories</a>
                     <ul class="dropdown">
-                        <li><a href="#">Web Development</a></li>
-                        <li><a href="#">Python</a></li>
-                        <li><a href="#">JavaScript</a></li>
-                        <li><a href="#">CSS</a></li>
+                        <li><a href="#" class="nav-link">Web Development</a></li>
+                        <li><a href="#" class="nav-link">Python</a></li>
+                        <li><a href="#" class="nav-link">JavaScript</a></li>
+                        <li><a href="#" class="nav-link">CSS</a></li>
                     </ul>
                 </li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html" class="nav-link">About</a></li>
+                <li><a href="contact.html" class="nav-link">Contact</a></li>
             </ul>
         </nav>
 
