--- a/index.html
+++ b/index.html
@@ -103,6 +103,61 @@
         </div>
     </header>
 
+    <div class="container">
+        <h1 class="heading">Hello, What Do You Want To Learn?</h1>
+
+        <div class="search-container">
+            <input type="text" class="search-input" placeholder="Data Str..." id="searchInput"
+                aria-label="Search for learning topics">
+            <button onclick="searchBlogs()" class="search-icon">🔍</button>
+        </div>
+
+        <div class="tags-container">
+            <button class="tag">Machine & ML</button>
+            <button class="tag">Computer Vision</button>
+            <button class="tag">AId: Linear Class...</button>
+        </div>
+    </div>
+
+    <!-- 🌟 Header -->
+
+    <h1 class="header">Explore Blog</h1>
+
+
+    <!-- 🌟 Explore Section -->
+    <section class="category">
+        <h2>Featured Blog Topics</h2>
+        <div class="grid">
+            <div class="card feature-card" data-category="dsa">Data Structure & Algorithms <span class="arrow">→</span>
+            </div>
+            <div class="card feature-card" data-category="practice-dsa">Practice DSA <span class="arrow">→</span></div>
+            <div class="card feature-card" data-category="web-dev">Web Development <span class="arrow">→</span></div>
+            <div class="card feature-card" data-category="ai-ml">AI ML & Data Science <span class="arrow">→</span></div>
+            <div class="card feature-card" data-category="python">Python <span class="arrow">→</span></div>
+            <div class="card feature-card" data-category="machine-learning">Machine Learning <span
+                    class="arrow">→</span></div>
+            <div class="card feature-card" data-category="system-design">System Design <span class="arrow">→</span>
+            </div>
+            <div class="card feature-card" data-category="devops">DevOps <span class="arrow">→</span></div>
+        </div>
+    </section>
+
+    <!-- 🌟 Web Development Section -->
+    <section class="category">
+        <h2>Web Development</h2>
+        <div class="grid">
+            <div class="card">JavaScript <span class="arrow">→</span></div>
+            <div class="card">HTML <span class="arrow">→</span></div>
+            <div class="card">CSS <span class="arrow">→</span></div>
+            <div class="card">ReactJS <span class="arrow">→</span></div>
+            <div class="card">Node.js <span class="arrow">→</span></div>
+            <div class="card">Django <span class="arrow">→</span></div>
+            <div class="card">Frontend Development <span class="arrow">→</span></div>
+            <div class="card">Backend Development <span class="arrow">→</span></div>
+        </div>
+    </section>
+
+
     <main>
         <h2 class="subheading">Learn how to use the latest tech tools to enhance your skills</h2>
 
