--- a/index.html
+++ b/index.html
@@ -89,36 +89,7 @@
   </head>
 
   <body>
-    <!-- 🌟 Header with Logo, Navigation & Search Bar -->
-    <header>
-      <!-- Navigation Menu -->
-      <nav>
-        <ul>
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li>
-            <a href="#" class="nav-link">Categories</a>
-            <ul class="dropdown">
-              <li><a href="#" class="nav-link">Web Development</a></li>
-              <li><a href="#" class="nav-link">Python</a></li>
-              <li><a href="#" class="nav-link">JavaScript</a></li>
-              <li><a href="#" class="nav-link">CSS</a></li>
-            </ul>
-          </li>
-          <li><a href="about.html" class="nav-link">About</a></li>
-          <li><a href="contact.html" class="nav-link">Contact</a></li>
-        </ul>
-      </nav>
-      <div class="logo">
-        <img src="images/logo.png" alt="Codec1 Logo" />
-        <h1>CODEC1</h1>
-      </div>
-
-      <!-- Search Bar -->
-      <div class="search-bar">
-        <input type="text" id="searchInput" placeholder="Search blogs..." />
-        <button onclick="searchBlogs()">🔍</button>
-      </div>
-    </header>
+<div></div>    
 
     <div class="container">
       <h1 class="heading">Hello, What Do You Want To Learn?</h1>
@@ -248,73 +219,7 @@
       </section>
     </main>
 
-    <footer>
-      <div class="footer-container">
-        <!-- About Us -->
-        <div class="footer-column">
-          <h3>Codec1</h3>
-          <p>
-            Codec1 is your go-to source for coding tutorials, tech projects, and
-            programming tools.
-          </p>
-        </div>
-
-        <!-- Quick Links -->
-        <div class="footer-column">
-          <h3>Quick Links</h3>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tutorials.html">Tutorials</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Use</a></li>
-          </ul>
-        </div>
-
-        <!-- Connect -->
-        <div class="footer-column">
-          <h3>Connect</h3>
-          <div class="social-icons">
-            <a href="#"
-              ><img src="images/twitter.png" alt="Twitter" title="Twitter"
-            /></a>
-            <a href="#"
-              ><img src="images/github.png" alt="GitHub" title="Github"
-            /></a>
-            <a href="#"
-              ><img src="images/linkedin.png" alt="LinkedIn" title="LinkedIn"
-            /></a>
-            <a href="#"
-              ><img
-                src="images/instagram.png"
-                alt="Instagram"
-                title="Instagram"
-            /></a>
-            <a href="#"
-              ><img src="images/facebook.png" alt="Facebook" title="Facebook"
-            /></a>
-            <a href="#"><img src="images/pinterest.png" alt="Pinterest" /></a>
-            <a href="#"><img src="images/brand-icon.jpg" alt="hashnode" /></a>
-            <a href="#"><img src="images/threads.png" alt="Threads " /></a>
-            <a href="#"><img src="images/rss.png" alt="Blogspot" /></a>
-            <a href="#"><img src="images/medium.png" alt="Medium" /></a>
-            <a href="#"><img src="images/wordpress.png" alt="Wordpress" /></a>
-          </div>
-          <form class="subscribe-form">
-            <h3>Subscribe Newsletter</h3>
-            <input type="email" placeholder="Enter your email" required />
-            <button type="submit">Subscribe</button>
-          </form>
-        </div>
-      </div>
-
-      <!-- Copyright -->
-      <div class="footer-bottom">
-        <p>© 2025 Codec1. All rights reserved.</p>
-      </div>
-
-      <!-- Back to Top Button -->
-      <button id="backToTop">↑</button>
-    </footer>
+   
 
     <!-- Include JavaScript -->
     <script defer src="js/script.js"></script>
