--- a/blogs/master-javascript.html
+++ b/blogs/master-javascript.html
@@ -61,7 +61,7 @@
   <!-- 🌟 Font Awesome for Social Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-  <link rel="stylesheet" href="/CSS/blog.css">
+  <link rel="stylesheet" href="/CSS/blog.-postcss">
 
 </head>
 
