--- a/About.html
+++ b/About.html
@@ -7,10 +7,11 @@
   <title>About - CodecOne1</title>
   <link rel="stylesheet" href="CSS/general.css">
   <link rel="stylesheet" href="CSS/about.css">
+  <script src="JS/script.js"></script>
 </head>
 
 <body>
-
+  <div id="header"></div>
   <main class="about-container">
     <!-- About Section -->
     <section class="about">
@@ -41,8 +42,8 @@
   </main>
 
 
-
-  <script src="JS/script.js"></script>
+  <div id="footer"></div>
+  
 
 </body>
 
