--- a/Contact.html
+++ b/Contact.html
@@ -7,9 +7,11 @@
   <title>Contact</title>
   <link rel="stylesheet" href="CSS/contact.css">
   <link rel="stylesheet" href="CSS/general.css">
+  <script src="JS/script.js"></script>
 </head>
 
 <body>
+  <div id="header"></div>
   <div class="contact-section">
     <div class="contact-card">
       <h1>Get in Touch</h1>
@@ -34,8 +36,8 @@
   </div>
 
 
-  <script src="JS/script.js"></script>
   <script src="JS/contact.js"></script>
+  <div id="footer"></div>
 </body>
 
 </html>
