--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Page</title>
     <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="css/general.css">
+    <script src="JS/script.js"></script>
 </head>
 <body>
+    <div id="header"></div>
 
     <!-- 🌟 Categories Section -->
     <section class="categories">
@@ -88,6 +91,6 @@
             </div>
         </div>
     </section>
-
+    <div id="footer"></div>
 </body>
 </html>
