--- a/About.html
+++ b/About.html
@@ -4,46 +4,100 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - CodecOne1</title>
-  <link rel="stylesheet" href="CSS/general.css">
-  <link rel="stylesheet" href="CSS/about.css">
-  <script src="JS/script.js"></script>
+  <title>About | Codec1</title>
+
+  <link rel="stylesheet" href="css/general.css">
+  <link rel="stylesheet" href="css/about.css">
+
 </head>
 
 <body>
-  <div id="header"></div>
-  <main class="about-container">
-    <!-- About Section -->
-    <section class="about">
-      <h1>About This Blog</h1>
-      <h2>Who We Are</h2>
-      <p>Welcome to <strong>CodecOne1</strong> – a place where developers explore, learn, and grow together. 🚀</p>
-      <p>We share high-quality programming tutorials, coding tips, and the latest trends in the tech industry. Whether
-        you're a beginner or an experienced developer, there's something here for you. 😃</p>
-    </section>
 
-    <!-- Team Section -->
-    <section class="team">
-      <h2>Meet Our Team</h2>
-      <div class="team-container">
-        <div class="team-card">
-          <img src="IMAGES/logo.png" alt="John Doe">
-          <h3>John Doe</h3>
-          <p>Founder & Developer</p>
-        </div>
-        <div class="team-card">
-          <img src="IMAGES/logo.png" alt="Jane Smith">
-          <h3>Jane Smith</h3>
-          <p>Content Creator</p>
+  <!-- Header (Loaded from header.html) -->
+  <div id="header"></div>
+
+  <main class="about-container">
+    <!-- 🌟 About Us Section -->
+    <section class="about-section">
+      <div class="about-content">
+        <img src="images/logo.png" alt="Codec1 Logo" class="about-logo">
+        <div class="about-text">
+          <h1>About Codec1</h1>
+          <p>
+            Codec1 is a tech blog dedicated to helping developers stay ahead in programming,
+            web development, AI, and more. We provide high-quality tutorials,
+            coding tips, and industry insights to help you grow as a developer.
+          </p>
         </div>
       </div>
-      <p>This blog shares tutorials and coding tips for Flask developers.</p>
     </section>
+
+    <!-- 🌟 Follow Us on Blog Platforms -->
+    <section class="follow-section">
+      <h2>Follow Us on Our Blog Platforms</h2>
+      <div class="follow-grid">
+        <div class="platform-card">
+          <iframe src="https://codec-one1.blogspot.com/" class="embed-frame"></iframe>
+          <a href="https://codec-one1.blogspot.com/" target="_blank" class="follow-btn">Follow on Blogger</a>
+        </div>
+        <div class="platform-card">
+          <iframe src="https://codec1.hashnode.dev/" class="embed-frame"></iframe>
+          <a href="https://codec1.hashnode.dev/" target="_blank" class="follow-btn">Follow on Hashnode</a>
+        </div>
+        <div class="platform-card">
+          <iframe src="https://medium.com/@codec1" class="embed-frame"></iframe>
+          <a href="https://medium.com/@codec1" target="_blank" class="follow-btn">Follow on Medium</a>
+        </div>
+        <div class="platform-card">
+          <iframe src="https://codec1.wordpress.com/" class="embed-frame"></iframe>
+          <a href="https://codec1.wordpress.com/" target="_blank" class="follow-btn">Follow on WordPress</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- 🌟 Social Media Profiles -->
+<section class="social-section">
+  <h2>Follow Us on Social Media</h2>
+  <div class="social-grid">
+      <a href="https://github.com/codec-one1" target="_blank" class="social-card">
+          <img src="images/github.png" alt="GitHub">
+          <p>Follow on GitHub</p>
+      </a>
+      <a href="https://www.linkedin.com/in/codec-one1/" target="_blank" class="social-card">
+          <img src="images/linkedin.png" alt="LinkedIn">
+          <p>Follow on LinkedIn</p>
+      </a>
+      <a href="https://twitter.com/codec_one1" target="_blank" class="social-card">
+          <img src="images/twitter.png" alt="Twitter">
+          <p>Follow on Twitter</p>
+      </a>
+      <a href="https://www.instagram.com/codec.one1/" target="_blank" class="social-card">
+          <img src="images/instagram.png" alt="Instagram">
+          <p>Follow on Instagram</p>
+      </a>
+      <a href="https://www.facebook.com/codec.one1" target="_blank" class="social-card">
+          <img src="images/facebook.png" alt="Facebook">
+          <p>Follow on Facebook</p>
+      </a>
+      <a href="https://www.threads.net/@codec.one1" target="_blank" class="social-card">
+          <img src="images/threads.png" alt="Threads">
+          <p>Follow on Threads</p>
+      </a>
+      <a href="https://www.pinterest.com/codec_one1/" target="_blank" class="social-card">
+          <img src="images/pinterest.png" alt="Pinterest">
+          <p>Follow on Pinterest</p>
+      </a>
+  </div>
+</section>
+
+
   </main>
 
-
+  <!-- Footer (Loaded from footer.html) -->
   <div id="footer"></div>
-  
+
+  <!-- JavaScript -->
+  <script defer src="js/script.js"></script>
 
 </body>
 
