some change in blog page

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/general.css">
     <script src="JS/script.js" defer></script>
 </head>
+
 <body>
     <div id="header"></div> <!-- Header Will Load Here -->
 
@@ -29,9 +31,11 @@
         <h2>Featured Blogs</h2>
         <div class="blog-grid">
             <div class="blog-card">
-                <img src="image1.jpg" alt="Blog Image">
+                <img src="IMAGES/logo.png" alt="Blog Image">
                 <div class="blog-content">
-                    <h3>Mastering JavaScript</h3>
+                    <a href="#">
+                        <h3>Mastering JavaScript</h3>
+                    </a>
                     <p class="blog-meta">Mar 3, 2025 • 4 min read</p>
                     <p class="blog-description">Learn the core JavaScript concepts...</p>
                     <a href="#" class="read-more">Read More</a>
@@ -39,9 +43,11 @@
             </div>
 
             <div class="blog-card">
-                <img src="image2.jpg" alt="Blog Image">
+                <img src="IMAGES/logo.png" alt="Blog Image">
                 <div class="blog-content">
-                    <h3>CSS Grid Layout</h3>
+                    <a href="#">
+                        <h3>CSS Grid Layout</h3>
+                    </a>
                     <p class="blog-meta">Feb 28, 2025 • 3 min read</p>
                     <p class="blog-description">Design modern web layouts...</p>
                     <a href="#" class="read-more">Read More</a>
@@ -49,9 +55,11 @@
             </div>
 
             <div class="blog-card">
-                <img src="image3.jpg" alt="Blog Image">
+                <img src="IMAGES/logo.png" alt="Blog Image">
                 <div class="blog-content">
-                    <h3>Python for Data Science</h3>
+                    <a href="#">
+                        <h3>Python for Data Science</h3>
+                    </a>
                     <p class="blog-meta">Feb 22, 2025 • 5 min read</p>
                     <p class="blog-description">Use Python to analyze data...</p>
                     <a href="#" class="read-more">Read More</a>
@@ -59,9 +67,11 @@
             </div>
 
             <div class="blog-card">
-                <img src="image4.jpg" alt="Blog Image">
+                <img src="IMAGES/logo.png" alt="Blog Image">
                 <div class="blog-content">
-                    <h3>Web Dev Guide</h3>
+                    <a href="#">
+                        <h3>Web Dev Guide</h3>
+                    </a>
                     <p class="blog-meta">Mar 5, 2025 • 6 min read</p>
                     <p class="blog-description">Frontend & Backend explained...</p>
                     <a href="#" class="read-more">Read More</a>
@@ -69,9 +79,11 @@
             </div>
 
             <div class="blog-card">
-                <img src="image5.jpg" alt="Blog Image">
+                <img src="IMAGES/logo.png" alt="Blog Image">
                 <div class="blog-content">
-                    <h3>React vs Angular</h3>
+                    <a href="#">
+                        <h3>React vs Angular</h3>
+                    </a>
                     <p class="blog-meta">Mar 2, 2025 • 4 min read</p>
                     <p class="blog-description">Compare these two frameworks...</p>
                     <a href="#" class="read-more">Read More</a>
@@ -79,9 +91,11 @@
             </div>
 
             <div class="blog-card">
-                <img src="image6.jpg" alt="Blog Image">
+                <img src="IMAGES/logo.png" alt="Blog Image">
                 <div class="blog-content">
-                    <h3>Machine Learning Basics</h3>
+                    <a href="#">
+                        <h3>Machine Learning Basics</h3>
+                    </a>
                     <p class="blog-meta">Feb 27, 2025 • 5 min read</p>
                     <p class="blog-description">Introduction to ML concepts...</p>
                     <a href="#" class="read-more">Read More</a>
@@ -89,9 +103,11 @@
             </div>
 
             <div class="blog-card">
-                <img src="image7.jpg" alt="Blog Image">
+                <img src="IMAGES/logo.png" alt="Blog Image">
                 <div class="blog-content">
-                    <h3>Cyber Security Guide</h3>
+                    <a href="#">
+                        <h3>Cyber Security Guide</h3>
+                    </a>
                     <p class="blog-meta">Feb 26, 2025 • 3 min read</p>
                     <p class="blog-description">Protect yourself online...</p>
                     <a href="#" class="read-more">Read More</a>
@@ -99,9 +115,11 @@
             </div>
 
             <div class="blog-card">
-                <img src="image8.jpg" alt="Blog Image">
+                <img src="IMAGES/logo.png" alt="Blog Image">
                 <div class="blog-content">
-                    <h3>Full-Stack Development</h3>
+                    <a href="#">
+                        <h3>Full-Stack Development</h3>
+                    </a>
                     <p class="blog-meta">Feb 25, 2025 • 4 min read</p>
                     <p class="blog-description">Learn frontend & backend...</p>
                     <a href="#" class="read-more">Read More</a>
@@ -109,9 +127,11 @@
             </div>
 
             <div class="blog-card">
-                <img src="image9.jpg" alt="Blog Image">
+                <img src="IMAGES/logo.png" alt="Blog Image">
                 <div class="blog-content">
-                    <h3>Cloud Computing Guide</h3>
+                    <a href="#">
+                        <h3>Cloud Computing Guide</h3>
+                    </a>
                     <p class="blog-meta">Feb 24, 2025 • 6 min read</p>
                     <p class="blog-description">AWS, Azure & Google Cloud...</p>
                     <a href="#" class="read-more">Read More</a>
@@ -122,4 +142,5 @@
 
     <div id="footer"></div> <!-- Footer Will Load Here -->
 </body>
+
 </html>
